--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
-        "fideloper/proxy": "^4.2",
+        "php": "^7.4",
+        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^8.9",
+        "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
